# kalshi-oms

./: .gitignore  Cargo.toml  README.md  rmq.ipynb  rmq.py
client-server/: CLIENT_PROTOCOL.md  Cargo.toml
client-server/src/: constants.rs  main.rs
exchange-server/: Cargo.toml
exchange-server-1/: Cargo.toml
exchange-server-1/src/: constants.rs  kalshi_wss.rs  server.rs
exchange-server-2/: Cargo.toml
exchange-server-2/src/: constants.rs  exchange_client_utils.rs  kalshi_wss.rs  server.rs
exchange-server/src/: constants.rs  exchange_client_utils.rs  kalshi_wss.rs  server.rs
protocol/: Cargo.toml
protocol/src/: constants.rs  lib.rs  read.rs
queue-client/: Cargo.toml
queue-client/src/: consumer.rs  lib.rs  producer.rs  queue_data.rs
queue-client/src/queue_data/: cancels.rs  data_core.rs  fills.rs  mod.rs  orders.rs
src/: server.rs
test-consumer/: Cargo.toml
test-consumer/src/: main.rs
test-producer/: Cargo.toml
test-producer/src/: main.rs
