[package]
name = "client-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = "2.3.1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
queue-client = { path = "../queue-client"}
kalshi = "0.9.0"
anyhow = "1.0.75"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"